# UnityAssetBundleOverview

./: .gitignore  README.md
uabo/: Cargo.toml
uabo/src/: Endian.rs  app.rs  args.rs  asset.rs  asset_bundle.rs  binary_reader.rs  class_info.rs  constants.rs  container_info.rs  decompress.rs  local_object_entry.rs  main.rs  object_info.rs  read_ext.rs  reference.rs  type_info.rs
