[package]
name = "uabo"
version = "0.1.0"
authors = ["BigOyayubi <55793780+BigOyayubi@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
lazy_static = "1.4.0"
rust-lzma = "0.5.1"
lz4 = "1.23.1"
blake3 = "0.3.3"
log = "0.4"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"